new pic for Mai

--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -145,7 +145,7 @@ en: &DEFAULT_EN
               <br/> Từng đạt học bổng toàn phần của KAIST; học bổng 100% và hỗ trợ tài chính của các trường: Minerva University (Mỹ), Texas Christian University (Mỹ), Allegheny College (Mỹ), Depauw University (Mỹ), Hobart & William Smith College (Mỹ), Lewis & Clarke College (Mỹ), Miami University (Mỹ), Ohio Wesleyan University (Mỹ), Rhodes College (Mỹ), Tokyo International University (Nhật); Đạt học bổng 95% Duke Kunshan University (Trung Quốc), 75% Swinburne University of Technology (Úc), 50% Deakin University (Úc), 90% SP Jain School of Global and Management (Úc), 80% Ritsumeikan Asia Pacific University (Nhật); Nhận được thư mời nhập học với học bổng/hỗ trợ tài chính cao từ Fulbright University Vietnam, VinUniversity, The Hong Kong University of Science and Technology (Hồng Kông).
               <br/> Hỗ trợ thành công mentee dành học bổng toàn phần của KAIST và các học bổng khác trên thế giới.  
               <br/> Tham gia hỗ trợ mentee apply học bổng của các trường trên thế giới"
-        image: assets/img/team/mai.jpg
+        image: assets/img/team/ngoc_mai.jpg
         social:
           - url: https://mail.google.com/mail/u/1/?view=cm&fs=1&to=semscholars.team@gmail.com&tf=1
             icon: fa fa-envelope
