--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -243,6 +243,17 @@ en: &DEFAULT_EN
             icon: fa fa-envelope
           - url: https://www.facebook.com/SEMScholarsTeam
             icon: fab fa-facebook-f
+      - name: "Đặng Thế Nguyễn"
+        role: "Scholarship mentor <br/> Hiện đang học chuyên ngành Korean Linguistics tại SNU, Hàn Quốc
+              <br/> Đạt học bổng GKS-G 2023. 
+              <br/> Tham gia hỗ trợ mentee apply học bổng ngành liên quan đến ngôn ngữ Hàn." 
+        image: assets\img\alumni\SNU.png
+        social:
+          - url: https://mail.google.com/mail/u/1/?view=cm&fs=1&to=semscholars.team@gmail.com&tf=1
+            icon: fa fa-envelope
+          - url: https://www.facebook.com/SEMScholarsTeam
+            icon: fab fa-facebook-f
+
   alumni:
     title: "Our scholars- Hall of fame"
     text: "Những mentee xuất sắc của team mentor"
