add mentor Quynh Nhi

--- a/_data/sitetext.yml
+++ b/_data/sitetext.yml
@@ -253,7 +253,17 @@ en: &DEFAULT_EN
             icon: fa fa-envelope
           - url: https://www.facebook.com/SEMScholarsTeam
             icon: fab fa-facebook-f
-
+      - name: "Phạm Quỳnh Nhi"
+        role: "Scholarship mentor <br/> Hiện đang học chuyên ngành Bussiness Administration tại SNU, Hàn Quốc
+              <br/> Đạt học bổng 100% của trường SNU, học bổng toàn phần có sinh hoạt phí của trường CUHK, học bổng tập đoàn Amore Pacific Hàn Quốc, học bổng doanh nghiệp Việt-Hàn Green Academy,
+              học bổng viện nghiên cứu môi trường châu Á. 
+              <br/> Tham gia hỗ trợ mentee apply học bổng các trường trên thế giới." 
+        image: assets\img\alumni\SNU.png
+        social:
+          - url: https://mail.google.com/mail/u/1/?view=cm&fs=1&to=semscholars.team@gmail.com&tf=1
+            icon: fa fa-envelope
+          - url: https://www.facebook.com/SEMScholarsTeam
+            icon: fab fa-facebook-f
   alumni:
     title: "Our scholars- Hall of fame"
     text: "Những mentee xuất sắc của team mentor"
